Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6498

QTextBoundaryFinder does not detect word end boundaries correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 4.6.0
    • None

    Description

      Reported initially by Zack

      The attached testcase demonstrates that the boundary reasons of QTextBoundaryFinder are sometimes incorrect. In the provided testcase the last position should be the end of a word. If a second whitespace is appended to the text, then the same position (22) is correctly detected as the end of a word.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ritt.ks Konstantin Ritt
            shausman Simon Hausmann
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes